# rv32_mini_emulator

./: CMakeLists.txt  main.c  main.cc  run_tests.py
source/: cli.c  cli.cc  error.c  logger.cc  parser.c  parser.cc
source/cli/: cli.c
source/error/: error.c
source/include/: cli.h  color.h  config.h  error.h  logger.h  parser.h  regs_state.h
source/parser/: parser.py
tests/: 1_test.in
